# paca

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cargo-test.yml
src/: cli.rs
src/parse/: error.rs  lexer.rs  mod.rs  parser.rs
src/parse/expr/: const_expr.rs  expr.rs  mod.rs  stmt.rs  types.rs
src/util/: mod.rs
