[package]
name = "paca"
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["Nobuharu Shimazu <nobu.bichanna@gmail.com>"]
description = "An experimental nibbler"
readme = "README.md"

[[bin]]
name = "paca"
path = "src/cli.rs"

[dependencies]
pest = { version = "2.7.5", features = ["pretty-print"] }
pest_derive = "2.7.5"
env_logger = "0.10"
log = { version = "0.4", features = ["release_max_level_info"] }
clap = { version = "4", features = ["derive", "cargo"] }
maplit = "1"